--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <faker.version>1.0.1</faker.version>
         <log4j.version>1.2.16</log4j.version>
         <reportng.version>1.1.4</reportng.version>
+        <environment>LIVE</environment>
     </properties>
 
     <!-- Quản lí thư viện -->
@@ -146,6 +147,13 @@
             <version>${aspectj.version}</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.aeonbits.owner</groupId>
+            <artifactId>owner</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+
     </dependencies>
 
     <!-- Compiler/ Run Test -->
@@ -171,7 +179,7 @@
                 <configuration>
                     <!-- Run TestNG xml file -->
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/RunTestcases.xml</suiteXmlFile>
+                        <suiteXmlFile>environmentXML/RunNopCommer${environment}.xml</suiteXmlFile>
                     </suiteXmlFiles>
 
                     <!-- Argument -->
