--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,109 @@
 
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>DEV</id>
+            <build>
+                <plugins>
+                    <!-- Run test -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <!-- Run TestNG xml file -->
+                            <suiteXmlFiles>
+                                <suiteXmlFile>environmentXML/RunNopCommerDEV.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+
+                            <!-- Argument -->
+                            <argLine>
+                                -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>TEST</id>
+            <build>
+                <plugins>
+                    <!-- Run test -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <!-- Run TestNG xml file -->
+                            <suiteXmlFiles>
+                                <suiteXmlFile>environmentXML/RunNopCommerTEST.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+
+                            <!-- Argument -->
+                            <argLine>
+                                -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>STAGING</id>
+            <build>
+                <plugins>
+                    <!-- Run test -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <!-- Run TestNG xml file -->
+                            <suiteXmlFiles>
+                                <suiteXmlFile>environmentXML/RunNopCommerSTAGING.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+
+                            <!-- Argument -->
+                            <argLine>
+                                -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>LIVE</id>
+            <build>
+                <plugins>
+                    <!-- Run test -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <!-- Run TestNG xml file -->
+                            <suiteXmlFiles>
+                                <suiteXmlFile>environmentXML/RunNopCommerLIVE.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+
+                            <!-- Argument -->
+                            <argLine>
+                                -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+
     <!-- Compiler/ Run Test -->
     <build>
         <plugins>
@@ -169,26 +272,6 @@
                     <source>11</source>
                     <target>11</target>
                 </configuration>
-            </plugin>
-
-            <!-- Run test -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <!-- Run TestNG xml file -->
-                    <suiteXmlFiles>
-                        <suiteXmlFile>environmentXML/RunNopCommer${environment}.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-
-                    <!-- Argument -->
-                    <argLine>
-                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                    </argLine>
-                </configuration>
-
-
             </plugin>
         </plugins>
     </build>
