--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,6 @@
         <faker.version>1.0.1</faker.version>
         <log4j.version>1.2.16</log4j.version>
         <reportng.version>1.1.4</reportng.version>
-        <environment>LIVE</environment>
     </properties>
 
     <!-- Quản lí thư viện -->
@@ -179,7 +178,7 @@
                 <configuration>
                     <!-- Run TestNG xml file -->
                     <suiteXmlFiles>
-                        <suiteXmlFile>environmentXML/RunNopCommer${environment}.xml</suiteXmlFile>
+                        <suiteXmlFile>src/test/resources/RunMultiServer.xml</suiteXmlFile>
                     </suiteXmlFiles>
 
                     <!-- Argument -->
